# pansim

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile.CPU  Dockerfile.GPU  Dockerfile.baseCPU  Dockerfile.devel  Fn_SLPIAHDR_ode.m  Fn_SLPIAHDR_out.m  Iref.mat  LICENSE  Makefile  README.md  defaultargs.json  pansimRunner.py  startup.m
.devcontainer/: devcontainer.json
archive/: Dockerfile.CPU  Dockerfile.GPU  Dockerfile.mCPU
archive/include/: agentsList.h  locationList.h  simulation.h  statistics.h
archive/src/: CMakeLists.txt
archive/tools/: processInfectiousList.py
batchRunner/: pansimRunner.py
cmake/: Cache.cmake  CompilerWarnings.cmake  Sanitizers.cmake  StandardProjectSettings.cmake  StaticAnalyzers.cmake  mycudautils.cmake
include/: agent.h  agentsList.h  datatypes.h  immunization.h  locationList.h  simulation.h  simulation.hpp  statistics.h
include/IO/: JSONDecoder.h  inputJSON.h
include/agentData/: PPStateTypes.h  agentMeta.h  agentStats.h  agentType.h  dynamicPPState.h
include/agents/: PPStateTypes.hpp  agentHandler.hpp  agentMeta.hpp  agentStats.hpp  agentType.hpp  dynamicPPState.hpp
include/handlers/: simulation.hpp
include/policies/: abstractPolicy.hpp  closurePolicies.h  closurePolicies.hpp  closurePolicy.hpp  infectionPolicies.h  infectionPolicies.hpp  infectionPolicy.hpp  movementPolicies.h  movementPolicies.hpp  movementPolicy.hpp  policy.hpp  testingPolicies.h  testingPolicies.hpp  testingPolicy.hpp
include/tools/: customExceptions.h  customExceptions.hpp  datatypes.h  datatypes.hpp  devObject.h  globalStates.hpp  logger.hpp  optional.h  randomGenerator.h  randomGenerator.hpp  smallTools.h  timeDay.hpp  timeHandler.h  timeHandler.hpp  util.h
include/utility/: smallTools.h
inputConfigFiles/: README.md  Scenario1.json  Scenario2.json  agentTypes.json  agentTypes_3.json  boosterPerWeek.txt  closureJun6_real_later3_delta_omicronBA2_earlier8.json  closureRules.json  config.json  configRandom.json  emptyRules.json  generate_transition.m  locationTypes.json  parameters.json  transition_average.m  vaccPerWeek.txt
inputConfigFiles/progressions/: transition_config.json  transition_illness0_1.json  transition_illness0_2.json  transition_illness0_3.json  transition_illness0_4.json  transition_illness0_5.json  transition_illness0_6.json  transition_illness0_7.json  transition_illness1_1.json  transition_illness1_2.json  transition_illness1_3.json  transition_illness1_4.json  transition_illness1_5.json  transition_illness1_6.json  transition_illness1_7.json  transition_illness2_1.json  transition_illness2_2.json  transition_illness2_3.json  transition_illness2_4.json  transition_illness2_5.json  transition_illness2_6.json  transition_illness2_7.json  transition_illness3_1.json  transition_illness3_2.json  transition_illness3_3.json  transition_illness3_4.json  transition_illness3_5.json  transition_illness3_6.json  transition_illness3_7.json  transition_illness4_1.json  transition_illness4_2.json  transition_illness4_3.json  transition_illness4_4.json  transition_illness4_5.json  transition_illness4_6.json  transition_illness4_7.json
inputConfigFiles/progressions_Jun17_tune/: transition_illness0_1.json  transition_illness0_3.json  transition_illness1_1.json  transition_illness1_2.json  transition_illness1_3.json  transition_illness1_4.json  transition_illness1_6.json  transition_illness2_1.json  transition_illness2_2.json  transition_illness2_3.json  transition_illness2_4.json  transition_illness2_6.json  transition_illness2_7.json  transition_illness3_2.json  transition_illness3_6.json  transition_illness3_7.json  transition_illness4_1.json  transition_illness4_3.json  transition_illness4_4.json  transition_illness4_5.json  transition_illness4_6.json
inputRealExample/: README.md  agents.tar  locations.json  locations.tar
matlab/: .gitignore  COV_init_LQ_nonlin.m  Folder_structure.txt  Main.m  Main_min_max.m  SEIR_measurement.m  _____TOROLNI_SZERETNEM_OLVASD_EL.txt  compute_beta.m  cpp_example_mex.cpp  figgen.m  findClosestStrings.m  get_SEIRb.m  load_PanSim_args.m  load_policy_measures.m  mexPanSim.cpp  mexPanSim.m  mexPanSim_wrap.m  mex_interface_cpp.m  run_cpp.m  run_cpp.py  simout2table.m
matlab/1/: Aggregator_A.m  Aggregator_C.m  Aggregator_D.m  Aggregator_F_Statistical.m  COV_sim_LQ_nonlin.slxc  Fn_SLPIA_ode.m  Fn_SLPIA_out.m  Intervention_Selector.m  Main.m  Main_MPC_Agent_v1_fancy.m  Main_MPC_Agent_v4_randref.m  Main_MPC_Agent_v5_Tp01.m  (+25 more)
scripts/: runtest.sh  runtest_mig.sh  runtest_mpi.sh
src/: CMakeLists.txt  main.cpp
src/IO/: CMakeLists.txt
src/IO/dataProviders/: CMakeLists.txt  dataProvider.cpp
src/IO/inputFormats/: CMakeLists.txt
src/IO/outputs/: CMakeLists.txt  JSONWriter.cpp  agentStatOutput.cpp
src/agentData/: CMakeLists.txt  PPStateTypes.cpp  agentMeta.cpp  agentStat.cpp  agentType.cpp  dynamicPPState.cpp  globalStates.cpp
src/agents/: CMakeLists.txt  PPStateTypes.cpp  agentMeta.cpp  agentStat.cpp  agentType.cpp  dynamicPPState.cpp
src/agents/progressionMatrices/: CMakeLists.txt  basicLengthAbstract.cpp  multiBadMatrix.cpp  singleBadMatrix.cpp
src/example/: CMakeLists.txt  example.cpp
src/handlers/: CMakeLists.txt  simulation.cpp
src/io/: CMakeLists.txt
src/io/JSONReaders/: CMakeLists.txt  JSONReader.cpp
src/io/JSONReaders/inputFormats/: CMakeLists.txt  agentTypesFormat.cpp  agentsFormat.cpp  closureFormat.cpp  configRandomFormat.cpp  locationTypesFormat.cpp  locationsFormat.cpp  progressionConfigFormat.cpp  progressionMatrixFormat.cpp
src/policies/: CMakeLists.txt  abstractPolicy.cpp  closurePolicy.cpp  infectionPolicy.cpp  movementPolicies.cpp  movementPolicy.cpp  policy.cpp  testingPolicy.cpp
src/tools/: CMakeLists.txt  globalStates.cpp  logger.cpp  operators.cpp  randomGenerator.cpp  smallTools.cpp  timeDay.cpp  timeHandler.cpp  timing.cpp  util.cpp
src/tools/progressionMatrices/: CMakeLists.txt  basicLengthAbstract.cpp  multiBadMatrix.cpp  singleBadMatrix.cpp
src/utility/: CMakeLists.txt  smallTools.cpp
test/: CMakeLists.txt
tools/: processInfectiousList.py
(+358 files in other folders)
